fix horizontal scroll on sizes below 1200px

--- a/src/App.css
+++ b/src/App.css
@@ -237,11 +237,11 @@ div#root {
 
 header {
 	width: 100%;
-	background-image: url("/assets/header-img.png");
+	background-image: url("/assets/header-img-v2.png");
 	height: 500px;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-color: #67bfbc;
+	background-color: #e4bb97;
 	background-size: 400px;
 }
 
@@ -260,7 +260,7 @@ header nav {
 	width: 100%;
 	z-index: 10;
 	padding: 15px 0;
-	background-color: #442624;
+	background-color: #33261d;
 	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.521);
 	display: flex;
 	justify-content: space-around;
@@ -305,7 +305,7 @@ main {
 
 .buttons-bar button {
 	color: black;
-	transition: color 0.35s;
+	transition: background-color 0.35s;
 	margin: 1% 0;
 	border-radius: 15px;
 	border: none;
@@ -346,11 +346,12 @@ main {
 	font-family: "Montserrat", sans-serif;
 	width: calc(32% - 2%);
 	text-align: center;
-	background-color: #e7a547;
+	background-color: #33261d;
+	color: white;
 	border-radius: 10px;
 	margin: 3% 1.5%;
 	padding: 0.5% 0.5%;
-	box-shadow: 0px 2px 10px black;
+	box-shadow: 1px 1px 15px black;
 }
 
 .item-container img {
@@ -373,40 +374,43 @@ footer p {
 }
 
 /* Media Queries */
-@media (max-width: 1400px) {
-	section {
-		padding: 0% 2%;
-	}
-}
 
 @media (max-width: 1200px) {
 	.display-inventory {
 		flex-direction: column;
 		align-items: center;
+		width: 100%;
 	}
 	.display-inventory ul {
 		width: 100%;
 	}
+	.buttons-bar p {
+		display: none;
+	}
 	.buttons-bar {
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
 		align-items: center;
 		width: 80%;
 	}
-	button {
+	.buttons-bar button {
 		width: 200px;
-		padding: 2%;
+		padding: 1.5%;
+		margin: 0 1%;
 	}
 }
 
 @media (max-width: 900px) {
 	.item-container {
-		width: calc(45% - 2%);
+		width: calc(40%);
 	}
 }
 
 @media (max-width: 600px) {
+	section {
+		padding: 0%;
+	}
 	.item-container {
-		width: calc(100%);
+		width: calc(80%);
 	}
 }
